Bug 1802649 - Fix C++20 -Wdeprecated-volatile warning by replacing volatile variable with an atomic. r=media-playback-reviewers,padenot

C++20 deprecated decrement/increment of object of volatile-qualified types, e.g. v++.

https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p1152r3.html

warning: dom/media/systemservices/CamerasParent.cpp:1073:20: '++' expression of 'volatile'-qualified type is deprecated [-Wvolatile]

If counter variable was incremented on the main thread, we could just remove the volatile. But it's incremented off the main thread, so we need to protect against races from multiple CamerasParent objects.

Differential Revision: https://phabricator.services.mozilla.com/D163164